fix: AppNav scrollbar (#315)

--- a/packages/app/styles/AppNav.module.scss
+++ b/packages/app/styles/AppNav.module.scss
@@ -65,6 +65,8 @@
   color: $slate-400;
   font-size: 12px;
   margin: 8px 16px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .listLinkActive {
